--- a/home.html
+++ b/home.html
@@ -108,6 +108,8 @@
     <p>&copy; 2025 Srinivas Rice Shop. All rights reserved.</p>
   </footer>
 </body>
+    <script src="script.js"></script>
+
 </html>
 
 <!-- ✅ Payment Methods Section -->
@@ -129,4 +131,5 @@
     <p>Srinivas Rice Shop has been serving high-quality rice to families and businesses for over 15 years. We specialize in premium varieties like Basmati, Sona Masoori, and Brown Rice. Our goal is to provide fresh, affordable rice with a focus on customer satisfaction and timely delivery.</p>
     <p>Located in Bhimavaram, Andhra Pradesh – we proudly support local farmers and ensure our customers get the best grains every time.</p>
   </section>
+
 
